--- a/GANs_mnist.ipynb
+++ b/GANs_mnist.ipynb
@@ -6,7 +6,7 @@
       "name": "GANs_mnist.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNcLOJEmeRhFzOOh6cvzLde",
+      "authorship_tag": "ABX9TyP8Y8A//KL3cjxNEZggx3vx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,21 +40,16 @@
         "from sklearn.utils import shuffle\n",
         "from tensorflow.keras.layers import Dense,Conv2DTranspose,Conv2D,Dropout,Flatten,MaxPool2D\n",
         "from tensorflow.keras.models import Sequential\n",
-        "from tensorflow.keras import activations\n",
+        "#from tensorflow.keras.layers.Activation import activation\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 1,
+      "execution_count": 15,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "w82vs-ntOVET",
-        "outputId": "69763450-316c-43d7-b3b1-51b79ae5bc60",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 50
-        }
+        "id": "w82vs-ntOVET"
       },
       "source": [
         "#preprocessing of dataset(normalization and shuffling of images)\n",
@@ -62,31 +57,21 @@
         "\n",
         "dataset = mnist.load_data(path=\"mnist.npz\")\n",
         "x_train,y_train,x_test,y_test = dataset[0][0],dataset[0][1],dataset[1][0],dataset[1][1]\n",
+        "x_train = x_train.reshape([x_train.shape[0],28,28,1]).astype('float32')\n",
         "x_train = x_train/255.0\n",
-        "x_train = shuffle(x_train)\n",
-        "x_train = tf.data.Dataset.from_tensor_slices(x_train).batch(batch_size)"
+        "#x_train = shuffle(x_train)\n",
+        "#x_train = tf.data.Dataset.from_tensor_slices(x_train).batch(batch_size)\n",
+        "BUFFER_SIZE = 60000\n",
+        "BATCH_SIZE = 256\n",
+        "dataset = tf.data.Dataset.from_tensor_slices(x_train).shuffle(BUFFER_SIZE).batch(BATCH_SIZE)"
       ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
-            "11493376/11490434 [==============================] - 0s 0us/step\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 55,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aztTGiy9OvDp",
-        "outputId": "e0e4ac54-f33f-4157-b678-b367cca985c7",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 336
-        }
+        "id": "aztTGiy9OvDp"
       },
       "source": [
         "#generator model\n",
@@ -95,36 +80,17 @@
         "  model.add(Dense(7*7*256))\n",
         "  model.add(Dropout(0.2))\n",
         "  model.add(tf.keras.layers.Reshape((7,7,256)))\n",
-        "  model.add(Conv2DTranspose(128,kernel_size=(5,5),activations = 'relu'))\n",
+        "  model.add(Conv2DTranspose(128,kernel_size=(5,5),strides=(1, 1), padding='same', use_bias=False,activation = 'relu'))\n",
         "  model.add(Dropout(0.2))\n",
-        "  model.add(Conv2DTranspose(64,kernel_size=(3,3),activations = 'relu'))\n",
+        "  model.add(Conv2DTranspose(64,kernel_size=(5,5),strides=(2, 2), padding='same', use_bias=False,activation = 'relu'))\n",
         "  model.add(Dropout(0.2))\n",
-        "  model.add(Conv2DTranspose(1,activations = 'relu'))\n",
+        "  model.add(Conv2DTranspose(1,kernel_size=(5,5),strides=(2, 2), padding='same', use_bias=False,activation = 'tanh'))\n",
         "  return model\n",
         "\n",
         "generator = generator_model()  "
       ],
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-6-1a234d430caa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     12\u001b[0m   \u001b[0;32mreturn\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m \u001b[0mgenerator\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgenerator_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-6-1a234d430caa>\u001b[0m in \u001b[0;36mgenerator_model\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m   \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDropout\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m   \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlayers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mReshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m256\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m   \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mConv2DTranspose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m128\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mkernel_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mactivations\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'relu'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m   \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDropout\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m   \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mConv2DTranspose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m64\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mkernel_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mactivations\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'relu'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/layers/convolutional.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, filters, kernel_size, strides, padding, output_padding, data_format, dilation_rate, activation, use_bias, kernel_initializer, bias_initializer, kernel_regularizer, bias_regularizer, activity_regularizer, kernel_constraint, bias_constraint, **kwargs)\u001b[0m\n\u001b[1;32m   1196\u001b[0m         \u001b[0mkernel_constraint\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconstraints\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkernel_constraint\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1197\u001b[0m         \u001b[0mbias_constraint\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconstraints\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbias_constraint\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1198\u001b[0;31m         **kwargs)\n\u001b[0m\u001b[1;32m   1199\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1200\u001b[0m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutput_padding\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0moutput_padding\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/layers/convolutional.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, filters, kernel_size, strides, padding, data_format, dilation_rate, groups, activation, use_bias, kernel_initializer, bias_initializer, kernel_regularizer, bias_regularizer, activity_regularizer, kernel_constraint, bias_constraint, **kwargs)\u001b[0m\n\u001b[1;32m    662\u001b[0m         \u001b[0mkernel_constraint\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconstraints\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkernel_constraint\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    663\u001b[0m         \u001b[0mbias_constraint\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconstraints\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbias_constraint\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 664\u001b[0;31m         **kwargs)\n\u001b[0m\u001b[1;32m    665\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    666\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/layers/convolutional.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, rank, filters, kernel_size, strides, padding, data_format, dilation_rate, groups, activation, use_bias, kernel_initializer, bias_initializer, kernel_regularizer, bias_regularizer, activity_regularizer, kernel_constraint, bias_constraint, trainable, name, conv_op, **kwargs)\u001b[0m\n\u001b[1;32m    135\u001b[0m         \u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    136\u001b[0m         \u001b[0mactivity_regularizer\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mregularizers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mactivity_regularizer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 137\u001b[0;31m         **kwargs)\n\u001b[0m\u001b[1;32m    138\u001b[0m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrank\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrank\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    139\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/training/tracking/base.py\u001b[0m in \u001b[0;36m_method_wrapper\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    455\u001b[0m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_self_setattr_tracking\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m  \u001b[0;31m# pylint: disable=protected-access\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    456\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 457\u001b[0;31m       \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmethod\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    458\u001b[0m     \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    459\u001b[0m       \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_self_setattr_tracking\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprevious_value\u001b[0m  \u001b[0;31m# pylint: disable=protected-access\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/engine/base_layer.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, trainable, name, dtype, dynamic, **kwargs)\u001b[0m\n\u001b[1;32m    316\u001b[0m     }\n\u001b[1;32m    317\u001b[0m     \u001b[0;31m# Validate optional keyword arguments.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 318\u001b[0;31m     \u001b[0mgeneric_utils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalidate_kwargs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mallowed_kwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    319\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    320\u001b[0m     \u001b[0;31m# Mutable properties\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/utils/generic_utils.py\u001b[0m in \u001b[0;36mvalidate_kwargs\u001b[0;34m(kwargs, allowed_kwargs, error_message)\u001b[0m\n\u001b[1;32m    776\u001b[0m   \u001b[0;32mfor\u001b[0m \u001b[0mkwarg\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mkwargs\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    777\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mkwarg\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mallowed_kwargs\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 778\u001b[0;31m       \u001b[0;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merror_message\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkwarg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    779\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    780\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: ('Keyword argument not understood:', 'activations')"
-          ]
-        }
-      ]
+      "execution_count": 70,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -135,15 +101,15 @@
         "#discriminator model\n",
         "def discriminator_model():\n",
         "  model = Sequential()  \n",
-        "  model.add(Conv2D(64,kernel = (3,3),activation='relu'))\n",
+        "  model.add(Conv2D(64,kernel_size = (3,3),activation='relu'))\n",
         "  model.add(Dropout(0.2))\n",
-        "  model.add(MaxPooling2D(pool_size=(2,2)))\n",
-        "  model.add(Conv2D(128,kernel = (3,3),activation='relu'))\n",
+        "  model.add(MaxPool2D(pool_size=(2,2)))\n",
+        "  model.add(Conv2D(128,kernel_size=(3,3),activation='relu'))\n",
         "  model.add(Dropout(0.3))\n",
-        "  model.add(MaxPooling2D(pool_size=(2,2)))\n",
-        "  model.add(Conv2D(256,kernel = (3,3),activation='relu'))\n",
+        "  model.add(MaxPool2D(pool_size=(2,2)))\n",
+        "  model.add(Conv2D(256,kernel_size = (3,3),activation='relu'))\n",
         "  model.add(Dropout(0.2))\n",
-        "  model.add(MaxPooling2D(pool_size=(2,2)))\n",
+        "  model.add(MaxPool2D(pool_size=(2,2)))\n",
         "  model.add(Flatten())\n",
         "  model.add(Dense(200,activation='relu'))\n",
         "  model.add(Dropout(0.2))\n",
@@ -151,9 +117,11 @@
         "  model.add(Dropout(0.2))\n",
         "  model.add(Dense(50,activation='relu'))\n",
         "  model.add(Dense(1,activation='relu'))\n",
-        "  return model"
+        "  return model\n",
+        "\n",
+        "discriminator = discriminator_model()   "
       ],
-      "execution_count": null,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -166,7 +134,7 @@
         "gen_optimizer = tf.keras.optimizers.Adam(1e-4)\n",
         "dis_optimizer = tf.keras.optimizers.Adam(1e-4)"
       ],
-      "execution_count": null,
+      "execution_count": 46,
       "outputs": []
     },
     {
@@ -179,7 +147,7 @@
         "def gen_loss(fake):\n",
         "  return tk.losses.binary_crossentropy(tf.zeros_like(fake),fake,from_logits = True)"
       ],
-      "execution_count": null,
+      "execution_count": 47,
       "outputs": []
     },
     {
@@ -195,7 +163,7 @@
         "  total_loss= real_loss + fake_loss\n",
         "  return total_loss  "
       ],
-      "execution_count": null,
+      "execution_count": 48,
       "outputs": []
     },
     {
@@ -214,15 +182,17 @@
         "  \n",
         "  with tf.GradientTape() as gen_tape, tf.GradientTape() as dis_tape:\n",
         "    gen_images = generator(noise,training = True)\n",
-        "    original = discriminator(images,training = True) \n",
+        "    print(np.array(images).shape)\n",
+        "    original = discriminator(images,training = True)\n",
+        "    print(np.array(gen_images).shape) \n",
         "    fake = discriminator(gen_images,training = True)\n",
         "    generator_loss,discriminator_loss = gen_loss(fake),dis_loss(fake,original)\n",
-        "    gen_gradient,dis_gradient = gen_tape.gradient(generator_loss,generator.trainable_variables),gen_tape.gradient(discriminator_loss,discriminator.trainable_variables)\n",
+        "    gen_gradient,dis_gradient = gen_tape.gradient(generator_loss,generator.trainable_variables),dis_tape.gradient(discriminator_loss,discriminator.trainable_variables)\n",
         "\n",
-        "  gen_optimizer(gen_gradient,generator.trainable_variables)\n",
-        "  dis_optimizer(dis_gradient,discriminator.trainable_variables)  "
+        "  gen_optimizer.apply_gradients(zip(gen_gradient,generator.trainable_variables))\n",
+        "  dis_optimizer.apply_gradients(zip(dis_gradient,discriminator.trainable_variables))  "
       ],
-      "execution_count": null,
+      "execution_count": 76,
       "outputs": []
     },
     {
@@ -248,7 +218,7 @@
         "  generate_and_save_image(generator,epochs,noise)\n",
         "  print(\"The number of epoch is \",epoch)\n"
       ],
-      "execution_count": null,
+      "execution_count": 65,
       "outputs": []
     },
     {
@@ -268,20 +238,48 @@
         "  plt.savefig('/content/images/epoch'+str(epoch)+'.png') \n",
         "   "
       ],
-      "execution_count": null,
+      "execution_count": 66,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VszWgn0lSXUS"
+        "id": "VszWgn0lSXUS",
+        "outputId": "ac9c8ed9-bd3f-4da4-885d-612682123879",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 284
+        }
       },
       "source": [
         "#training occurs\n",
         "train(dataset,epochs,batch_size)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(256, 28, 28, 1)\n",
+            "(256, 28, 28, 1)\n",
+            "(256, 28, 28, 1)\n",
+            "(256, 28, 28, 1)\n",
+            "(256, 28, 28, 1)\n",
+            "(256, 28, 28, 1)\n",
+            "(256, 28, 28, 1)\n",
+            "(256, 28, 28, 1)\n",
+            "(256, 28, 28, 1)\n",
+            "(256, 28, 28, 1)\n",
+            "(256, 28, 28, 1)\n",
+            "(256, 28, 28, 1)\n",
+            "(256, 28, 28, 1)\n",
+            "(256, 28, 28, 1)\n",
+            "(256, 28, 28, 1)\n",
+            "(256, 28, 28, 1)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
